2009-08-19  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* term/tgif.trm:
	1) supports continuous colors (make_palette, set_color)
	2) supports fill patterns (filled_polygon)
	3) supports the density of solid fill (filled_polygon)
	4) adds TGIF_fillbox and TGIF_previous_palette (doing nothing)
	5) modifies two variable names (u* -> d*)
	6) swap point types 1 and 2 to match other terminals

2009-08-18  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot2d.c src/plot3d.c docs/gnuplot.doc: More problems with
	iterate plus in-line definitions.  The scope of iteration within a plot
	command is documented as extending to the first comma or semicolon, but
	unfortunately the parser didn't allow omiting the comma after a 
	definition.  Now it does.  Add simple examples to the documentation.

2009-08-15  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* term/tgif.trm (TGIF_set_color): Support for RGB colors and TC_LT.

2009-08-13  anonymous 

	* term/tek.trm: Add support for xterm tektronix emulation

2009-08-07  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot3d.c: The combination of iteration and in-line definition was
	fatal to splot.  Move the iteration check to encompass definitions also.
	Bug #2833808

2009-08-05  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c (boundary): The calculation of vertical space required
	to hold rotated x axis tick labels was only being done if the margins
	were in auto mode.  Rearrange the code so that the calculation is also
	made for plots with explicit 'set [tb]margin'.
	Bug #2830712

2009-08-04  Ethan A Merritt  <merritt@u.washington.edu>

	* docs/gnuplot.doc:  Expand section on newhistogram command.

2009-08-02  Ethan A Merritt  <merritt@u.washington.edu>

	* src/misc.c src/save.c src/graphics.c src/term_api.h docs/gnuplot.doc
	docs/plotstyles.gnu:  Add new linestyle property 'pointinterval'.
	This is a modified version of patchset #2653943 contributed by
	Hans (oe6jwf@users.sourceforge.net).
